--- a/README.rm
+++ b/README.rm
@@ -13,10 +13,11 @@ To start:
 run npm start within both client and API
 
 
-
-
-
 References: 
 
 https://dev.to/nburgess/creating-a-react-app-with-react-router-and-an-express-backend-33l3
 https://www.freecodecamp.org/news/how-to-make-create-react-app-work-with-a-node-backend-api-7c5c48acb1b0/
+
+
+Patch Notes:
+2/15/2020 -- Added concurrency. Now you can run both using "npm start" at the root folder
